added made by lines, images and links

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -19,6 +19,7 @@
         <a href="mailto:valeriya@live.ca">
           <img src="img/mail_pixels 3.png" alt="Mail Logo" class="social-icon" height="40" width="40">
         </a>
+        <p>Made with <img src="img/heart.png" alt="heart" height="20" width="20"> by <br> Val <img src="img/insta_pixels.png " alt="instagram" height="30" width="30"> <img src="img/mail_pixels 3.png" alt="mail" height="30" width="30"> </br> <br>Dhruv <img src="img/mail_pixels 3.png" alt="mail" height="30" width="30"> </br></p>
         <p>&copy; 2017 valeriya edemskaya</p>
       </div>
     </header>
